--- a/index.html
+++ b/index.html
@@ -1,133 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registo de Avarias de PCs</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-            background: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        label {
-            font-weight: bold;
-        }
-        select, input, button {
-            padding: 10px;
-            font-size: 16px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 12px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Registo de Avarias de PCs</h1>
-        <form id="avariaForm">
-            <label for="sala">Sala:</label>
-            <select id="sala" name="sala" required>
-                <option value="">Selecione a Sala</option>
-                <option value="Sala 1">Sala 1</option>
-                <option value="Sala 2">Sala 2</option>
-                <option value="Sala 3">Sala 3</option>
-                <option value="Sala 4">Sala 4</option>
-                <option value="Sala 5">Sala 5</option>
-            </select>
+<HTML>
+<HEAD>
+    OLA
+</HEAD>
+    <BODY>
+        OLLLLL
+    </BODY>
+</HTML>
 
-            <label for="pc">PC:</label>
-            <select id="pc" name="pc" required>
-                <option value="">Selecione o PC</option>
-                <option value="PC 1">PC 1</option>
-                <option value="PC 2">PC 2</option>
-                <option value="PC 3">PC 3</option>
-                <option value="PC 4">PC 4</option>
-                <option value="PC 5">PC 5</option>
-                <option value="PC 6">PC 6</option>
-                <option value="PC 7">PC 7</option>
-                <option value="PC 8">PC 8</option>
-                <option value="PC 9">PC 9</option>
-                <option value="PC 10">PC 10</option>
-                <option value="PC 11">PC 11</option>
-                <option value="PC 12">PC 12</option>
-            </select>
-
-            <label for="descricao">Descrição da Avaria:</label>
-            <input type="text" id="descricao" name="descricao" required>
-
-            <button type="submit">Registar Avaria</button>
-        </form>
-
-        <h2>Avarias Registadas</h2>
-        <table id="avariasTable">
-            <thead>
-                <tr>
-                    <th>Sala</th>
-                    <th>PC</th>
-                    <th>Descrição</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- As avarias registadas aparecerão aqui -->
-            </tbody>
-        </table>
-    </div>
-
-    <script>
-        document.getElementById('avariaForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            // Obtém os valores do formulário
-            const sala = document.getElementById('sala').value;
-            const pc = document.getElementById('pc').value;
-            const descricao = document.getElementById('descricao').value;
-
-            // Cria uma nova linha na tabela
-            const table = document.getElementById('avariasTable').getElementsByTagName('tbody')[0];
-            const newRow = table.insertRow();
-
-            // Insere as células na linha
-            const salaCell = newRow.insertCell(0);
-            const pcCell = newRow.insertCell(1);
-            const descricaoCell = newRow.insertCell(2);
-
-            salaCell.textContent = sala;
-            pcCell.textContent = pc;
-            descricaoCell.textContent = descricao;
-
-            // Limpa o formulário
-            document.getElementById('avariaForm').reset();
-        });
-    </script>
-</body>
-</html>
